@@ -26,6 +26,8 @@
 
 defined('MOODLE_INTERNAL') || die();
 
+require_once(dirname(dirname(__FILE__)).'/locallib.php');
+
 /**
  * Performs data migrations and updates on upgrade.
  *
@@ -108,6 +110,18 @@ function xmldb_bigbluebuttonbn_upgrade($oldversion = 0) {
         xmldb_bigbluebuttonbn_add_change_field($dbman, 'bigbluebuttonbn', 'recordings_preview',
             $fielddefinition);
         upgrade_mod_savepoint(true, 2017101009, 'bigbluebuttonbn');
+    }
+    if ($oldversion < 2017101010) {
+        $sql  = "SELECT * FROM {bigbluebuttonbn} ";
+        $sql .= "WHERE moderatorpass = ? OR viewerpass = ?";
+        $instances = $DB->get_records_sql($sql, array('', ''));
+        foreach ($instances as $instance) {
+            $instance->moderatorpass = bigbluebuttonbn_random_password(12);
+            $instance->viewerpass = bigbluebuttonbn_random_password(12, $instance->moderatorpass);
+            // Store passwords in the database.
+            $DB->update_record('bigbluebuttonbn', $instance);
+        }
+        upgrade_mod_savepoint(true, 2017101010, 'bigbluebuttonbn');
     }
     return true;
 }
